fix unintended horizontal scroll in blog

--- a/stylesheets/components/Animations/GrowingCircleAnimation.module.sass
+++ b/stylesheets/components/Animations/GrowingCircleAnimation.module.sass
@@ -1,7 +1,12 @@
 @import "../../../utils/colorPalette"
 
 .size
-  width: 100vw
+  /* Vertical scroll bar in browsers take some viewport width. If you don't do this calculation,
+     your page's width will be set to available viewport + the width of the scroll bar. This will
+     cause your page to show a horizontal scroll bar because technically your whole page is not
+     fitting the available view area.
+     Source: https://stackoverflow.com/questions/33606565 */
+  width: calc(100vw - (100vw - 100%))
   height: 100vh
   position: absolute
   z-index: -1
